--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <img class="img-fluid" src="image/noDBCrypto1.PNG" alt="">
             </a>
             <div class="portfolio-caption">
-              <a href="http://104.248.132.46:3001/#//" target ="_blank"><h4>NoDB App</h4></a>
+              <a href="http://104.248.132.46:3001/#/" target ="_blank"><h4>NoDB App</h4></a>
             </br>
               <p class="text-muted">Full stack app about Cryto Price real-time Database included D3 Chart model for visualization</p>
             </div>
