--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <img class="img-fluid" src="image/noDBCrypto1.PNG" alt="">
             </a>
             <div class="portfolio-caption">
-              <a href="http://104.248.132.46:3001/#/" target ="_blank"><h4>NoDB App</h4></a>
+              <a href="http://www.bitmax.vucodezone.com/#/" target ="_blank"><h4>NoDB App</h4></a>
             </br>
               <p class="text-muted">Full stack app about Cryto Price real-time Database included D3 Chart model for visualization</p>
             </div>
@@ -286,7 +286,7 @@
               <img class="img-fluid" src="image/yelpclone1.PNG" alt="">
             </a>
             <div class="portfolio-caption">
-              <a href="http://www.vucodezone.com/#/" target ="_blank"><h4>Bestzap</h4></a>
+              <a href="http://vucodezone.com/#/" target ="_blank"><h4>Bestzap</h4></a>
             </br>
               <p class="text-muted">
                 Best place to search your fav place for review & info. 
@@ -545,7 +545,7 @@
                   </br>
                   <div>
                     <div>
-                      <a href="http://104.248.132.46:3001/#/" target="_blank"><button class="btn btn-primary" type="button">See Demo</button></a>
+                      <a href="http://www.bitmax.vucodezone.com/#/" target="_blank"><button class="btn btn-primary" type="button">See Demo</button></a>
                       <a href="https://github.com/vutran6853/CryptoMarkets" target="_blank"><button class="btn btn-primary" type="button">Source Code</button></a>
                     </div>
                     <div>
@@ -630,7 +630,7 @@
                   </br>
                   <div>
                     <div>
-                      <a href="http://www.vucodezone.com/#/" target="_blank"><button class="btn btn-primary" type="button">See Demo</button></a>
+                      <a href="http://vucodezone.com/#/" target="_blank"><button class="btn btn-primary" type="button">See Demo</button></a>
                       <a href="https://github.com/vutran6853/bestzap" target="_blank"><button class="btn btn-primary" type="button">Source Code</button></a>
                     </div>
                     <div>
