--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vu Tran - Web Developer Portfolio</title>
+    <title>Vu Tran - Front End Developer Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Vu Tran</div>
-          <div class="intro-heading text-uppercase">Full-Stack Web Developer</div>
+          <div class="intro-heading text-uppercase">Front End Engineer</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">More Info</a>
         </div>
       </div>
@@ -369,12 +369,12 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>JAN 2018 - DEC 2018</h4>
-                    <h4 class="subheading">Full Stack Web Developer</h4>
+                    <h4>JAN 2018 - FEB 2019</h4>
+                    <h4 class="subheading">Front End Engineer</h4>
                     <h5>DevMountain</h5>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Full Stack Web Developer | React, Redux, Node, Express, postgreSQL, and Firebase 
+                    <p class="text-muted">Front End Engineer | React, Redux, Node, Express, postgreSQL, and Firebase 
                         A social blogging site used to keep updated on and interact with other users stories/sub posts. 
                         Technologies Used: Javascript, React.js, Redux, Node.js, PostgreSQL, Firebase, OAuth, SASS. 
                     </p>
@@ -413,7 +413,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; VU TRAN 2018</span>
+            <span class="copyright">Copyright &copy; VU TRAN 2019</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
