--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About Me</h2>
-            <h3 class="section-subheading text-muted" style="line-height: 26px;">As a full-stack web developer with a background in IT Information Systems and Technologies, I am eager to absorb and incorporate all the latest frameworks and libraries to contribute to your company's professional goals. Qualifications include my technical skills, keen eye for details and receptive learning. Let's chat!</h3>
+            <h3 class="section-subheading text-muted" style="line-height: 26px;">As a Front End Engineer with a background in IT Information Systems and Technologies, I am eager to absorb and incorporate all the latest frameworks and libraries to contribute to your company's professional goals. Qualifications include my technical skills, keen eye for details and receptive learning. Let's chat!</h3>
           </div>
         </div>
 
